--- a/css/styles.css
+++ b/css/styles.css
@@ -3,8 +3,8 @@
 }
 
 button{
-  font-family: monoid;
-  font-size: 10px;
+  font-family: 'Inconsolata', monospace;
+  font-size: 13px;
   background-color: white;
   cursor: pointer;
   user-select: none;
@@ -21,8 +21,7 @@ button{
 
 .red-currency, .green-currency, .blue-currency{
   font-size: 20px;
-  min-width: 200px;
-  border: 1px solid black;
+  width: 200px;
   padding: 10px;
   text-align: left;
 }
@@ -41,20 +40,20 @@ button{
 
 .navigation-container{
   display: flex;
-  margin-bottom: 20px;
 }
 
 .navigation-button{
   font-size: 20px;
-  min-width: 200px;
+  min-width: 120px;
   border: 1px solid black;
+  margin-right: 10px;
   padding: 10px;
   text-align: center;
   cursor: pointer;
 }
 
 .color-producer {
-  width: 1000px;
+  width: 800px;
   border: 2px solid black;
   margin-bottom: 20px;
 }
@@ -71,12 +70,11 @@ button{
   align-items: center;
   padding: 10px;
   width: 150px;
-  font-size: 13px;
   border: 1px solid black;
 }
 
 .color-progress-container{
-  width: 500px;
+  width: 350px;
   border: 1px solid black;
 }
 
@@ -99,7 +97,6 @@ button{
 
 .color-adder-button{
   padding: 5px;
-  font-size: 13px;
   width: 200px;
   display: flex;
   flex-direction: column;
@@ -139,8 +136,7 @@ button{
   align-items: center;
   border: 1px solid black;
   background-color: #eee;
-  height: 40px;
-  font-size: 15px;
+  height: 25px;
   margin: 10px;
   padding: 10px;
 }
@@ -156,9 +152,9 @@ button{
   flex-direction: column;
   justify-content: space-between;
   padding: 10px;
-  width: 25%;
-  height: 120px;
-  font-size: 10px;
+  width: 22%;
+  height: 100px;
+  font-size: 12px;
   text-align: center;
   border: 1px solid black;
 }
@@ -168,7 +164,8 @@ button{
 }
 
 .options-button{
-  width: 200px;
-  height: 100px;
+  width: 170px;
+  height: 70px;
   border: 1px solid black;
+  margin-bottom: 15px;
 }
