--- a/css/Dark.css
+++ b/css/Dark.css
@@ -1,13 +1,27 @@
+*{
+  color: #D9D9D9;
+}
+
+body{
+  background-color: #121212
+}
+
 #app{
-  margin: 15px;
+  padding: 15px;
 }
 
 button{
   font-family: 'Inconsolata', monospace;
   font-size: 13px;
-  background-color: white;
+  border: 2px solid #D9D9D9;
+  background-color: #121212;
   cursor: pointer;
+  transition-duration: 0.2s;
   user-select: none;
+}
+
+button:hover{
+  background-color: #323232
 }
 
 .button--disabled{
@@ -21,21 +35,21 @@ button{
 
 .red-currency, .green-currency, .blue-currency{
   font-size: 20px;
-  width: 200px;
+  min-width: 200px;
   padding: 10px;
   text-align: left;
 }
 
 .red-currency{
-  color: #f00
+  color: #FF200C;
 }
 
 .green-currency{
-  color: #0f0
+  color: #00FC00;
 }
 
 .blue-currency{
-  color: #00f
+  color: #5013FF;
 }
 
 .navigation-container{
@@ -45,7 +59,6 @@ button{
 .navigation-button{
   font-size: 20px;
   min-width: 120px;
-  border: 1px solid black;
   margin-right: 10px;
   padding: 10px;
   text-align: center;
@@ -54,7 +67,7 @@ button{
 
 .color-producer {
   width: 800px;
-  border: 2px solid black;
+  border: 2px solid #D9D9D9;
   margin-bottom: 20px;
 }
 
@@ -70,12 +83,27 @@ button{
   align-items: center;
   padding: 10px;
   width: 150px;
-  border: 1px solid black;
+  border: 1px solid #D9D9D9;
+}
+
+.color-adder-red{
+  color: #FF200C;
+  font-size: 20px;
+}
+
+.color-adder-green{
+  color: #00FC00;
+  font-size: 20px;
+}
+
+.color-adder-blue{
+  color: #5013FF;
+  font-size: 20px;
 }
 
 .color-progress-container{
   width: 350px;
-  border: 1px solid black;
+  border: 1px solid #D9D9D9;
 }
 
 .color-progress-red, .color-progress-green, .color-progress-blue{
@@ -84,15 +112,15 @@ button{
 }
 
 .color-progress-red{
-  background-color: #f00;
+  background-color: #FF200C;
 }
 
 .color-progress-green{
-  background-color: #0f0;
+  background-color: #00FC00;
 }
 
 .color-progress-blue{
-  background-color: #00f;
+  background-color: #5013FF;
 }
 
 .color-adder-button{
@@ -101,17 +129,36 @@ button{
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  border: 1px solid black;
+  border-color: #A3FF90;
 }
+
+.color-adder-button:hover{
+  background-color: #515151;
+}
+
+.color-adder-button--disabled, .color-adder-button--auto{
+  background-color: #6B6B6B;
+  border-color: #FFA28A;
+}
+
+.color-adder-button--disabled:hover, .color-adder-button--auto:hover{
+  background-color: #6B6B6B;
+}
+
 
 .color-upgrade-coll-button-red, .color-upgrade-coll-button-green, .color-upgrade-coll-button-blue{
   cursor: pointer;
   padding: 0 5px;
   height: 20px;
-  border-top: 2px solid black;
-  border-bottom: 2px solid black;
-  background-color: #eee
+  border-top: 2px solid #D9D9D9;
+  border-bottom: 2px solid #D9D9D9;
+  transition-duration: 0.2s;
 }
+
+.color-upgrade-coll-button-red:hover, .color-upgrade-coll-button-green:hover, .color-upgrade-coll-button-blue:hover{
+  background-color: #515151;
+}
+
 
 .color-upgrade-coll-button-red:after, .color-upgrade-coll-button-green:after, .color-upgrade-coll-button-blue:after{
   float: right;
@@ -126,7 +173,6 @@ button{
 .color-upgrade-coll-container-red, .color-upgrade-coll-container-green, .color-upgrade-coll-container-blue{
   padding: 0 10px;
   max-height: 0;
-  background-color: #eee;
   overflow: hidden;
   transition: max-height 0.2s ease-out;
 }
@@ -134,11 +180,20 @@ button{
 .color-effect-container{
   display: flex;
   align-items: center;
-  border: 1px solid black;
-  background-color: #eee;
+  border: 1px solid #D9D9D9;
   height: 25px;
   margin: 10px;
   padding: 10px;
+}
+
+.color-effect-green{
+  color: #00FC00;
+  font-size: 20px
+}
+
+.color-effect-blue{
+  color: #5013FF;
+  font-size: 20px
 }
 
 .color-upgrade-container{
@@ -156,7 +211,46 @@ button{
   height: 100px;
   font-size: 12px;
   text-align: center;
-  border: 1px solid black;
+  border-color: #A3FF90;
+}
+
+.color-upgrade-button:hover, .color-auto:hover{
+  background-color: #515151;
+}
+
+.color-upgrade-button--disabled{
+  background-color: #6B6B6B;
+  border-color: #FFA28A;
+}
+
+.color-upgrade-button--disabled:hover{
+  background-color: #6B6B6B;
+  cursor: default;
+}
+
+.color-upgrade-button--max{
+  border-color: #F9FA93;
+}
+
+.color-upgrade-button--max:hover{
+  border-color: #F9FA93;
+  cursor: default;
+}
+
+.color-auto--manual{
+  border-color: #FFA28A;
+}
+
+.color-auto--manual:hover{
+  background-color: #515151;
+}
+
+.color-auto--auto{
+  border-color: #A3FF90;
+}
+
+.color-auto--auto:hover{
+  background-color: #515151;
 }
 
 .options-tab button{
@@ -166,6 +260,5 @@ button{
 .options-button{
   width: 170px;
   height: 70px;
-  border: 1px solid black;
   margin-bottom: 15px;
 }
