--- a/css/Dark.css
+++ b/css/Dark.css
@@ -18,6 +18,7 @@ button{
   cursor: pointer;
   transition-duration: 0.2s;
   user-select: none;
+  align-items: stretch;
 }
 
 button:hover{
@@ -145,7 +146,6 @@ button:hover{
   background-color: #6B6B6B;
 }
 
-
 .color-upgrade-coll-button-red, .color-upgrade-coll-button-green, .color-upgrade-coll-button-blue{
   cursor: pointer;
   padding: 0 5px;
@@ -230,6 +230,7 @@ button:hover{
 
 .color-upgrade-button--max{
   border-color: #F9FA93;
+  background-color: inherit;
 }
 
 .color-upgrade-button--max:hover{
