--- a/css/Default.css
+++ b/css/Default.css
@@ -27,14 +27,27 @@ button:hover{
 
 .currency-container {
   display: flex;
+  flex-direction: column;
   margin-bottom: 20px;
 }
 
-.red-currency, .green-currency, .blue-currency{
+.currency-container-top, .currency-container-bottom{
+  display: flex;
+  flex-direction: row;
+}
+
+.red-currency, .green-currency, .blue-currency, .light-currency{
   font-size: 20px;
   min-width: 200px;
   padding: 10px;
   text-align: left;
+}
+
+.brightness-prestige-button{
+  margin: 0 10px;
+  height: 50px;
+  min-width: 200px;
+  padding: 10px;
 }
 
 .red-currency{
@@ -47,6 +60,23 @@ button:hover{
 
 .blue-currency{
   color: #3B0EFF;
+}
+
+.light-currency{
+  color: #FFB700;
+}
+
+.brightness-prestige-button{
+  border: 2px solid #FFD100;
+}
+
+.brightness-prestige-button--disabled{
+  background-color: #AAAAAA;
+  cursor: default;
+}
+
+.brightness-prestige-button--disabled:hover{
+  background-color: #AAAAAA;
 }
 
 .navigation-container{
@@ -62,9 +92,14 @@ button:hover{
   cursor: pointer;
 }
 
+.navigation-button-brightness{
+  border: 2px solid #FFD100;
+  color: #FFB700;
+}
+
 .color-producer {
   width: 800px;
-  border: 2px solid black;
+  border: 2px solid #000000;
   margin-bottom: 20px;
 }
 
@@ -80,7 +115,7 @@ button:hover{
   align-items: center;
   padding: 10px;
   width: 150px;
-  border: 1px solid black;
+  border: 1px solid #000000;
 }
 
 .color-adder-red{
@@ -100,7 +135,7 @@ button:hover{
 
 .color-progress-container{
   width: 350px;
-  border: 1px solid black;
+  border: 1px solid #000000;
 }
 
 .color-progress-red, .color-progress-green, .color-progress-blue{
@@ -146,8 +181,8 @@ button:hover{
   cursor: pointer;
   padding: 0 5px;
   height: 20px;
-  border-top: 2px solid black;
-  border-bottom: 2px solid black;
+  border-top: 2px solid #000000;
+  border-bottom: 2px solid #000000;
   transition-duration: 0.2s;
 }
 
@@ -176,7 +211,7 @@ button:hover{
 .color-effect-container{
   display: flex;
   align-items: center;
-  border: 1px solid black;
+  border: 1px solid #000000;
   height: 25px;
   margin: 10px;
   padding: 10px;
