--- a/css/Dark.css
+++ b/css/Dark.css
@@ -291,11 +291,16 @@ button:hover{
 }
 
 .options-tab button{
-  font-size: 20px;
+  font-size: 17px;
+  vertical-align: top;
 }
 
 .options-button{
   width: 170px;
   height: 70px;
   margin-bottom: 15px;
+}
+
+.option-button-brightness{
+  border: 2px solid #FFFF00
 }
