--- a/css/Dark.css
+++ b/css/Dark.css
@@ -37,6 +37,7 @@ button:hover{
 
 .currency-container-top, .currency-container-bottom{
   display: flex;
+  justify-content: space-between;
   flex-direction: row;
 }
 
@@ -85,6 +86,7 @@ button:hover{
 
 .navigation-container{
   display: flex;
+  margin-bottom: 20px;
 }
 
 .navigation-button{
@@ -99,6 +101,15 @@ button:hover{
 .navigation-button-brightness{
   border: 2px solid #FFFF00;
   color: #F2F367;
+}
+
+.navigation-button-subtab{
+  font-size: 15px;
+  min-width: 160px;
+  margin-right: 10px;
+  padding: 10px;
+  text-align: center;
+  cursor: pointer;
 }
 
 .color-producer {
@@ -288,6 +299,11 @@ button:hover{
 
 .color-auto--auto:hover{
   background-color: #515151;
+}
+
+.brightness-upgrade-popup{
+  background-color: #121212;
+  border: 2px solid #D9D9D9
 }
 
 .options-tab button{
