--- a/css/Default.css
+++ b/css/Default.css
@@ -4,6 +4,7 @@ body{
 
 #app{
   padding: 15px;
+  width: 1000px;
 }
 
 button{
@@ -33,6 +34,7 @@ button:hover{
 
 .currency-container-top, .currency-container-bottom{
   display: flex;
+  justify-content: space-between;
   flex-direction: row;
 }
 
@@ -81,6 +83,7 @@ button:hover{
 
 .navigation-container{
   display: flex;
+  margin-bottom: 20px;
 }
 
 .navigation-button{
@@ -95,6 +98,15 @@ button:hover{
 .navigation-button-brightness{
   border: 2px solid #FFD100;
   color: #FFB700;
+}
+
+.navigation-button-subtab{
+  font-size: 15px;
+  min-width: 160px;
+  margin-right: 10px;
+  padding: 10px;
+  text-align: center;
+  cursor: pointer;
 }
 
 .color-producer {
@@ -284,6 +296,21 @@ button:hover{
 
 .color-auto--auto:hover{
   background-color: #D1D1D1;
+}
+
+.brightness-upgrade-button{
+  width: 100px;
+  height: 100px;
+  font-size: 20px;
+  border-radius: 50%;
+}
+
+.brightness-upgrade-popup{
+  width: 300px;
+  height: 50px;
+  margin-left: 100px;
+  margin-top: 50px;
+  display: flex;
 }
 
 .options-container-file{
