--- a/src/css/ColorPalette.css
+++ b/src/css/ColorPalette.css
@@ -3,6 +3,7 @@
   --color-red: #FF1507;
   --color-green: #00EA00;
   --color-blue: #3B0EFF;
+  --color-brightness: #FFB700;
   --border-color: #000000;
   --border-color-button: #5555CC;
   --border-color-enabled: #00D300;
@@ -21,6 +22,7 @@
   --color-red: #FF200C;
   --color-green: #00FC00;
   --color-blue: #5013FF;
+  --color-brightness: #F2F367;
   --border-color: #D9D9D9;
   --border-color-button: #D9D9D9;
   --border-color-enabled: #A3FF90;
