--- a/src/css/ColorPalette.css
+++ b/src/css/ColorPalette.css
@@ -4,15 +4,18 @@
   --color-green: #00EA00;
   --color-blue: #3B0EFF;
   --color-brightness: #FFB700;
+  --color-locked: #AAAAAA;
   --border-color: #000000;
   --border-color-button: #5555CC;
   --border-color-enabled: #00D300;
   --border-color-disabled: #FF1507;
+  --border-color-locked: #AAAAAA;
   --border-color-max: #FFD100;
   --background-color: #E8F1F2;
   --background-color-enabled: transparent;
   --background-color-enabled--hover: #D1D1D1;
   --background-color-disabled: #AAAAAA;
+  --background-color-locked: transparent;
   --background-color-max: #F9FA93;
   --button--hover: #DCEAEB;
 }
@@ -23,15 +26,18 @@
   --color-green: #00FC00;
   --color-blue: #5013FF;
   --color-brightness: #F2F367;
+  --color-locked: #6B6B6B;
   --border-color: #D9D9D9;
   --border-color-button: #D9D9D9;
   --border-color-enabled: #A3FF90;
   --border-color-disabled: #FFA28A;
+  --border-color-locked: #6B6B6B;
   --border-color-max: #F9FA93;
   --background-color: #121212;
   --background-color-enabled: transparent;
   --background-color-enabled--hover: #515151;
   --background-color-disabled: #6B6B6B;
+  --background-color-locked: transparent;
   --background-color-max: transparent;
   --button--hover: #323232;
 }
