branch darken if not purchased

--- a/src/css/ColorPalette.css
+++ b/src/css/ColorPalette.css
@@ -38,6 +38,6 @@
   --background-color-enabled--hover: #515151;
   --background-color-disabled: #6B6B6B;
   --background-color-locked: transparent;
-  --background-color-max: transparent;
+  --background-color-max: #121212;
   --button--hover: #323232;
 }
